# otagrum

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile.in  Makefile.am  README.rst  TODO  configure.ac  setVersionNumber.sh
.ci_support/: run_docker_build.sh  run_docker_linux.sh  run_docker_mingw.sh
cmake/: Useotagr.cmake  Useotagrum.cmake  otagrConfig.cmake.in  otagrumConfig.cmake.in
config/: common.am  test.am
doc/: GenericInformation.tex.in  Makefile.am  Math_Notations.sty  OTAgrumDocumentation.sty  OTAgrumDocumentation.tex  OTAgrum_ExamplesGuide.tex  OTAgrum_ReferenceGuide.tex  OTAgrum_UseCasesGuide.tex  OTAgrum_UserManual.tex  OTAgrum_summary.tex  OTAgrum_title.tex  script_Plant_Growth.py
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt  ContinuousBIC.cxx  ContinuousBayesianNetwork.cxx  ContinuousBayesianNetworkFactory.cxx  ContinuousMIIC.cxx  ContinuousMIIC2.cxx  ContinuousPC.cxx  ContinuousPC2.cxx  ContinuousTTest.cxx  CorrectedMutualInformation.cxx  DistributionBayesianNetwork.cxx  Greater.cxx  IndicesManip.cxx  JunctionTree.cxx  JunctionTreeBernsteinCopula.cxx  JunctionTreeBernsteinCopulaFactory.cxx  JunctionTreeDistribution.cxx  MixedHistogramUserDefined.cxx  NamedDAG.cxx  NamedJunctionTree.cxx  OTAGRUMResourceMap.cxx  OTAgrumResourceMap.cxx  OtAgrUtils.cxx  StratifiedCache.cxx  TabuList.cxx  Utils.cxx
lib/src/otagr/: ContinuousPC.hxx  ContinuousTTest.hxx  IndicesManip.hxx  JunctionTree.hxx  JunctionTreeDistribution.hxx  MixedHistogramUserDefined.hxx  OtAgrUtils.hxx  StratifiedCache.hxx  Utils.hxx
lib/src/otagrum/: ContinuousBIC.hxx  ContinuousBayesianNetwork.hxx  ContinuousBayesianNetworkFactory.hxx  ContinuousMIIC.hxx  ContinuousMIIC2.hxx  ContinuousPC.hxx  ContinuousPC2.hxx  ContinuousTTest.hxx  CorrectedMutualInformation.hxx  DistributionBayesianNetwork.hxx  Greater.hxx  IndicesManip.hxx  JunctionTree.hxx  JunctionTreeBernsteinCopula.hxx  JunctionTreeBernsteinCopulaFactory.hxx  JunctionTreeDistribution.hxx  MixedHistogramUserDefined.hxx  NamedDAG.hxx  NamedJunctionTree.hxx  OTAGRUMResourceMap.hxx  OTAgrumResourceMap.hxx  StratifiedCache.hxx  TabuList.hxx  Utils.hxx
lib/test/: CMakeLists.txt  correlated_sample.csv  t_ContinuousBayesianNetwork_std.cxx  t_ContinuousBayesianNetwork_std.expout  t_ContinuousMIIC2_std.cxx  t_ContinuousMIIC2_std.expout  t_ContinuousMIIC_std.cxx  t_ContinuousMIIC_std.expout  t_ContinuousPC2_std.cxx  t_ContinuousPC2_std.expout  t_ContinuousPC_std.cxx  t_ContinuousPC_std.expout  t_ContinuousTTest_std.cxx  t_ContinuousTTest_std.expout  t_CorrectedMutualInformation_std.cxx  t_CorrectedMutualInformation_std.expout  t_IndicesManip_std.cxx  t_IndicesManip_std.expout  t_JunctionTreeBernsteinCopula_std.cxx  t_JunctionTreeBernsteinCopula_std.expout  t_JunctionTree_std.cxx  t_JunctionTree_std.expout  t_MixedHistogramUserDefined_std.cxx  t_MixedHistogramUserDefined_std.expout  t_NamedDAG_std.cxx  t_NamedDAG_std.expout  t_NamedJunctionTree_std.cxx  t_NamedJunctionTree_std.expout  t_OTAgrumResourceMap_std.cxx  t_OTAgrumResourceMap_std.expout  t_OtAgr_std.cxx  t_OtAgr_std.expout  t_StratifiedCache_std.cxx  t_StratifiedCache_std.expout  t_TabuList_std.cxx  t_TabuList_std.expout  t_Utils_std.cxx  t_Utils_std.expout  t_papillon_std.cxx  t_papillon_std.expout
python/: BayesNetAgrum.i  Makefile.am  otagrum.i  otagrum.pth  using_cpc2_cmiic2.ipynb
python/doc/: bibliography.rst  conf.py.in  index.rst  openturns-objects.inv  pyagrum-objects.inv  pyagrum-objects.txt
python/doc/_templates/: class.rst_t
python/doc/developer_guide/architecture/: architecture.rst
python/doc/examples/: README.txt  examples.rst  plant_growth.ipynb  plot_plant_growth.py  plot_using_otagrum.py  torque_model.ipynb  torque_model.py  usingOtagrum.ipynb
python/doc/themes/openturns/: layout.html
python/doc/user_manual/: user_manual.rst
python/extensions/: Makefile.am
python/src/: CMakeLists.txt  ContinuousBIC.i  ContinuousBIC_doc.i.in  ContinuousBayesianNetwork.i  ContinuousBayesianNetworkFactory.i  ContinuousBayesianNetworkFactory_doc.i  ContinuousBayesianNetworkFactory_doc.i.in  ContinuousBayesianNetwork_doc.i  ContinuousBayesianNetwork_doc.i.in  ContinuousMIIC.i  ContinuousMIIC2.i  ContinuousMIIC2_doc.i  ContinuousMIIC_doc.i  ContinuousMIIC_doc.i.in  ContinuousPC.i  ContinuousPC2.i  ContinuousPC2_doc.i  ContinuousPC_doc.i  ContinuousPC_doc.i.in  ContinuousTTest.i  ContinuousTTest_doc.i  ContinuousTTest_doc.i.in  CorrectedMutualInformation.i  CorrectedMutualInformation_doc.i  CorrectedMutualInformation_doc.i.in  DistributionBayesianNetwork.i  DistributionBayesianNetwork_doc.i  JunctionTree.i  JunctionTreeBernsteinCopula.i  JunctionTreeBernsteinCopulaFactory.i  JunctionTreeBernsteinCopulaFactory_doc.i.in  JunctionTreeBernsteinCopula_doc.i  JunctionTreeBernsteinCopula_doc.i.in  JunctionTree_doc.i.in  METADATA.in  MixedHistogramUserDefined.i  MixedHistogramUserDefined_doc.i.in  NamedDAG.i  NamedDAG_doc.i  NamedDAG_doc.i.in  (+17 more)
python/test/: CMakeLists.txt  asia_dirichlet_5000.csv  t_ContinuousBayesianNetworkFactory_std.expout  t_ContinuousBayesianNetworkFactory_std.py  t_ContinuousBayesianNetwork_std.expout  t_ContinuousBayesianNetwork_std.py  t_ContinuousMIIC2_std.expout  t_ContinuousMIIC2_std.py  t_ContinuousMIIC_std.expout  t_ContinuousMIIC_std.py  t_ContinuousPC2_std.expout  t_ContinuousPC2_std.py  t_ContinuousPC_std.expout  t_ContinuousPC_std.py  t_JunctionTreeBernsteinCopula_std.expout  t_JunctionTreeBernsteinCopula_std.py  t_JunctionTree_std.expout  t_JunctionTree_std.py  t_MixedHistogramUserDefined_std.expout  t_MixedHistogramUserDefined_std.py  t_NamedJunctionTree_std.expout  t_NamedJunctionTree_std.py  t_OTAgrumResourceMap_std.py  t_OtAgr_std.expout  t_OtAgr_std.py  t_TabuList_std.expout  t_TabuList_std.py  t_Utils_std.expout  t_Utils_std.py  t_docstring.expout  t_docstring.py  t_notebook.py  t_plant_growth.expout  t_plant_growth.py
src/: BayesNetAgrum.cxx  BayesNetAgrum.hxx  Makefile.am
test/: Makefile.am  check_testsuite.at  package.m4  python_installcheck_testsuite.at  t_BayesNetAgrum_std.cxx  t_BayesNetAgrum_std.py
(+23 files in other folders)
